--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -80,8 +80,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RightTeleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
-+ActionMappings=(ActionName="RightActivate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
++ActionMappings=(ActionName="RightActivate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Y)
++ActionMappings=(ActionName="LeftTeleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
++ActionMappings=(ActionName="LeftActivate",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
