Add variable by c++ code

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -118,7 +118,7 @@ r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/Template_Default.Template_Default
+EditorStartupMap=/Game/BaseLevel.BaseLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -127,7 +127,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/BaseLevel.BaseLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
